# QFlow-COVOs

./: .gitignore  QFlow.ipynb  Qflow_SDTQ.py  README.md
CPP/: QFlow.cpp  Random_Gen.ipynb  test.py
FCI/: FCI-BS.py  FCI-Bitstring.py  FCI-Code-Parallel.py  FCI-Code.py  Select-CI.py
FCI /: FCI-Code.ipynb
Qflow-Be2/: Qflow_test_250613.ipynb
Test/: test.ipynb
covo-ci/: .gitignore  1  README.md  pyproject.toml
covo-ci/.github/workflows/: ci.yml
covo-ci/docs/: TUTORIAL.md
covo-ci/examples/aperiodic_h2/: EXPECTED_OUTPUT.txt
covo-ci/examples/periodic_h2/: EXPECTED_OUTPUT.txt
covo-ci/legacy/: README.md  aperiodic_fci.py  extract_log_files.py  extract_singlet_perm_dirs.py  periodic_fci_serial.py
covo-ci/scripts/: generate_h2_example.py
covo-ci/src/covo_ci/: __init__.py  cli.py  extract.py  hamiltonian_aperiodic.py  hamiltonian_periodic.py  io_aperiodic.py  io_periodic.py  solver.py  spin.py  strings.py
qflow-suite/: .gitignore  LICENSE  README.md  pyproject.toml
qflow-suite/.github/workflows/: ci.yml
qflow-suite/examples/h4_sd/: EXPECTED_OUTPUT.txt
qflow-suite/legacy/: README.md  SD-NoTQ.py  serial_python.py
qflow-suite/scripts/: generate_h4_example.py
qflow-suite/src/qflow_suite/: __init__.py  algorithm_sd.py  algorithm_sdtq.py  cli.py  common.py
qflow-suite/tests/: test_qflow_suite.py
