[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qflow-suite"
version = "0.1.0"
description = "QFlow correlation energy optimizer (SD and SDTQ variants), consuming FCI matrix files from covo-ci."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Bhumika" }
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "numba>=0.56",
    "joblib>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
qflow-suite = "qflow_suite.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that run a full QFlow optimization loop (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 120
target-version = "py39"
extend-exclude = ["src/qflow_suite/algorithm_sd.py", "src/qflow_suite/algorithm_sdtq.py"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E741", "E731"]
